<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICV Project Watch Companion</string>
    <string name="hello_world">We will need your Heart Rate Here and Compute The Target Zone</string>
    <string name="action_settings">Settings</string>
    <string name ="action_search">search searchs</string>
    <string name="input_age">Your age is: </string>
    <string name="text_heart_rate"> Maximum Heart Rate </string>
    <string name="tv_VeryLight"> Very Light </string>
    <string name="tv_Moderate"> Moderate </string>
    <string name="tv_Light"> Light </string>
    <string name="tv_Vigorous"> Vigorous </string>
    <string name="tv_Maximal"> Maximal </string>


        <string name="ble_not_supported">BLE is not supported</string>
        <string name="label_data">Data:</string>
        <string name="label_device_address">Device address:</string>
        <string name="label_state">State:</string>
        <string name="no_data">No data</string>
        <string name="connected">Connected</string>
        <string name="disconnected">Disconnected</string>
        <string name="title_devices">pk BLE Device Scan</string>
        <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

        <string name="unknown_device">Unknown device</string>
        <string name="unknown_characteristic">Unknown characteristic</string>
        <string name="unknown_service">Unknown service</string>

        <!-- Menu items -->
        <string name="menu_connect">Connect</string>
        <string name="menu_disconnect">Disconnect</string>
        <string name="menu_scan">Scan</string>
        <string name="menu_stop">Stop</string>
    <string name="btn_UpdateWatch">Update The Watch</string>

</resources>
