<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sb_Age"
        android:layout_marginTop="75dp"
        android:max="99"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_age"
        android:id="@+id/tv_Age"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_heart_rate"
        android:id="@+id/tv_HeartRate"
        android:layout_below="@+id/sb_Age"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_CalcHeartRate"
        android:layout_toEndOf="@+id/tv_HeartRate"
        android:layout_alignTop="@+id/tv_HeartRate"
        android:layout_marginLeft="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_VeryLight"
        android:id="@+id/tv_VeryLight"
        android:layout_below="@+id/tv_HeartRate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_Light"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_Moderate"
        android:id="@+id/textView5"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textColorHighlight="#ff13ff10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MinVeryLight"
        android:layout_alignTop="@+id/tv_VeryLight"
        android:layout_toEndOf="@+id/tv_Age" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MaxVeryLight"
        android:layout_alignTop="@+id/tv_MinVeryLight"
        android:layout_alignStart="@+id/tv_CalcHeartRate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MinLight"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/tv_MinVeryLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MaxLight"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/tv_MaxVeryLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MinModerate"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignStart="@+id/tv_MinLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MaxModerate"
        android:layout_alignBottom="@+id/tv_MinModerate"
        android:layout_alignStart="@+id/tv_MaxLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_Vigorous"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:textColorHighlight="#ff2a7fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_Maximal"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:textColorHighlight="#ffff3925" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MinVigorous"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignStart="@+id/tv_MinModerate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MaxVigorous"
        android:layout_alignTop="@+id/tv_MinVigorous"
        android:layout_alignStart="@+id/tv_MaxModerate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MinMaximal"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignStart="@+id/tv_MinVigorous" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_MaxMaximal"
        android:layout_toEndOf="@+id/tv_MinMaximal"
        android:layout_alignTop="@+id/tv_MinMaximal"
        android:layout_alignStart="@+id/tv_MaxVigorous" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_UpdateWatch"
        android:drawableLeft="@drawable/ic_launcher"
        android:id="@+id/bn_SetWatch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:theme="@android:style/ButtonBar"
        android:enabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="State"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/tv_ConnectState"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Device Address"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/tv_DeviceAddress"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/tv_ConnectState" />

</RelativeLayout>
